# wonder

./: .gitignore  Cargo.toml  README.md  index.html  old_with_trunk.html
old/: amainasdf.rs  main_api.rs  main_old.rs  player.rs
src/: asdf.rs  block.rs  character_components.rs  comms.rs  components.rs  debug.rs  game_scene.rs  init_setup.rs  main.rs  player.rs  player_old.rs  player_setup_scene.rs  qr_code_overlay_scene.rs  sharedstructs.rs  utils.rs  web.rs
src/old/: block.rs  brokemain.rs  components.rs  debug.rs  main working.rs  web.rs
