[package]
name = "wonder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# recommended to remove dynamic when you're ready to ship/release.
[dependencies]
bevy = { version = "0.9" }   #, features = ["dynamic"] }
bevy-inspector-egui = "0.14"
# rand = "0.8"
# ulam = "0.4.1"
# ehttp = "0.2.0"
# serde_json = "1.0"
wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
# web-sys = "0.3"
reqwest = { version = "0.11", features = ["json"] }
# futures-lite = "1.12"
# rand = "0.8.5"
async-channel = "1.8"
# tokio = { version = "1", features = ["rt"] }
# crossbeam-channel = "0.5"
# anyhow = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
