[package]
name = "wonder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# recommended to remove dynamic when you're ready to ship/release.
[dependencies]
bevy = { version = "0.9" }
bevy-inspector-egui = "0.14"
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["json"] }
async-channel = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }
qrcode = "0.12.0"
bevy_egui = "0.18.0"
egui_extras = { version = "0.20", features = ["svg"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Window", "Navigator", "Permissions"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
